@@ -14,7 +14,8 @@
 		"? Krastorio2",
 		"? RampantArsenal",
 		"? aai-vehicles-ironclad",
-		"? lightArtillery"
+		"? lightArtillery",
+		"? lightArtillery-Balanced"
 	]
 }
 
