@@ -1,10 +1,16 @@
+local icon
+if mods["lightArtillery"] then
+  icon = "__lightArtillery__/graphics/icons/artillery-shell.png"
+elseif mods["lightArtillery-Balanced"] then
+  icon = "__lightArtillery-Balanced__/graphics/icons/artillery-shell.png"
+end
 weaponTypes["derpy-artillery-ammo"]= {
   type = "artillery",
   max_size = "small",
   min_size = "tiny",
   baseName = "derpy-artillery-ammo",
   base_item = "derpy-artillery-ammo",
-  icon = "__lightArtillery__/graphics/icons/artillery-shell.png",
+  icon = icon,
   energy_required = 1,
   icons = {},
   lights = {},
